@@ -1,5 +1,7 @@
 *SVN*
 
+* Add a unified render method to ActionMailer (delegates to ActionView::Base#render)
+
 * Move mailer initialization to a separate (overridable) method, so that subclasses may alter the various defaults #1727
 
 * Look at content-location header (if available) to determine filename of attachments #1670
